# UV-Python-Template-Project

./: .env  .gitignore  pyproject.toml
src/application/: __init__.py  __main__.py
src/application/utils/logs_mana/: logging_mana.py
src/application/utils/logs_mana/logging_conf_files/: formatters.yaml  handlers.yaml  loggers.yaml
src/application/utils/system_info/: system_info_management.py
